...
  );

  getIt.registerSingleton<GetPresence>(
    GetPresence(getIt<MessageRepository>()),
  );

  // 10.7. Use Cases pour Match/Discovery
  getIt.registerSingleton<GetDiscoveryProfiles>(
    GetDiscoveryProfiles(getIt<MatchRepository>()),
  );

  getIt.registerSingleton<LikeProfile>(
    LikeProfile(getIt<MatchRepository>()),
...
